--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@ body {
     background-color: #cccccc;
 }
 
+#banner {
+    width: 100%;
+}
+
+h1 {
+    text-align: center;
+    background: #CCCCCC;
+}
+
 p {
     text-align: center;
     background: #cccccc;
@@ -10,3 +19,9 @@ p {
 em strong {
     color: red;
 }
+
+#mision {
+    font-size: 20px;
+}
+
+#banner {}
